<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/qLetterMargin"
            android:text="@string/q"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/qLetterSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/qMarginBottom"
            android:layout_marginRight="@dimen/qMarginRight"
            android:text="@string/q1"
            android:textColor="@color/black"
            android:textSize="@dimen/qSize" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/answerGroupMarginLeft"
        android:layout_marginRight="@dimen/answerGroupMarginRight"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/a11" />

        <RadioButton
            android:id="@+id/q1Answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/a12" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/a13" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/a14" />
    </RadioGroup>
</LinearLayout>